# knoten

archive/: EIS_spice.ipynb
miniset/: .clang-format  CMakeLists.txt  README.md  environment.yaml
miniset/apps/: campt.cpp
miniset/cmake/: FindCSMAPI.cmake  FindUSGSCSM.cmake
miniset/examples/: CMakeLists.txt
miniset/include/bundle/: bundle_types.hpp  ceres_optimizer.hpp  cost_functors.hpp  partials.hpp
miniset/include/core/: math.hpp  transforms.hpp  types.hpp
miniset/include/csm/: camera_ops.hpp  campt.hpp  csm_interface.hpp  triangulation.hpp
miniset/include/sensor/: angles.hpp  geometry.hpp  resolution.hpp
miniset/include/surface/: dem.hpp  ellipsoid.hpp  intersection.hpp
miniset/include/utils/: coordinate_transforms.hpp  proj_wrapper.hpp
miniset/src/bundle/: ceres_optimizer.cpp  cost_functors.cpp  partials.cpp
miniset/src/core/: math.cpp  transforms.cpp
miniset/src/csm/: camera_ops.cpp  campt.cpp  csm_interface.cpp  triangulation.cpp
miniset/src/sensor/: angles.cpp  geometry.cpp  resolution.cpp
miniset/src/surface/: dem.cpp  ellipsoid.cpp  intersection.cpp
miniset/src/utils/: coordinate_transforms.cpp  proj_wrapper.cpp
miniset/tests/: CMakeLists.txt  test_angles.cpp  test_bundle.cpp  test_coordinate_transforms.cpp  test_csm_interface.cpp  test_dem.cpp  test_ellipsoid.cpp  test_math.cpp
